Fix comments dissapearing when flattening and expanding Document util public methods Use expand and not unflatten which is not an actual word

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
       },
       {
         "command": "extension.expandByUnderscore",
-        "title": "Rejson: Unflatten by underscore(_)"
+        "title": "Rejson: Expand by underscore(_)"
       }
     ]
   },
