--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
       }
     }
   },
+  "license": "MIT",
   "scripts": {
     "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./",
